# ventrix

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ç
.github/workflows/: rust.yml  seq_action.yml
configuration/: base.yaml  docker.yaml  production.yaml
grafana-storage/: grafana.db
migrations/: 20230305194533_create_subscriptions_table.sql  20230801175656_create_services_table.down.sql  20230801175656_create_services_table.up.sql  20230805152549_create_event_types_table.down.sql  20230805152549_create_event_types_table.up.sql  20230805160220_create_queue_table.down.sql  20230805160220_create_queue_table.up.sql  20230820084600_create_event_type_to_service_table.down.sql  20230820084600_create_event_type_to_service_table.up.sql  20230820144429_create_events_published_table.down.sql  20230820144429_create_events_published_table.up.sql  20230827185237_create_failed_events_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  database.rs  lib.rs  main.rs  startup.rs  types.rs
src/application/: mod.rs
src/application/queue_service/: mod.rs  ventrix_queue.rs
src/common/: configuration.rs  helpers.rs  mod.rs  telemetry.rs  types.rs
src/common/errors/: mod.rs
src/database/: inmemory.rs  mod.rs  postgres.rs
src/domain/: mod.rs
src/errors/: mod.rs
src/helpers/: parsers.rs
src/infrastructure/: mod.rs
src/models/: mod.rs  service.rs
src/queue/: mod.rs
src/routes/: events.rs  mod.rs  queue.rs  services.rs  subscriptions.rs
src/schema_validator/: mod.rs
src/types/: mod.rs
tests/: health_check.rs
(+10 files in other folders)
